--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,9 @@
         <fabric8.label.group>ticket-monster</fabric8.label.group>
         <fabric8.label.service>ticket-monster-admin</fabric8.label.service>
         <fabric8.iconRef>wildfly</fabric8.iconRef>
+
+        <fabric8.env.DEBUG>true</fabric8.env.DEBUG>
+        <fabric8.env.DEBUG_PORT>5005</fabric8.env.DEBUG_PORT>
     </properties>
 
     <dependencyManagement>
@@ -295,7 +298,7 @@
                                                 <includes>
                                                     <include>${project.groupId}:${project.artifactId}</include>
                                                 </includes>
-                                                <outputFileNameMapping>standalone/deployments/ticket-monster-monolith-backend.war</outputFileNameMapping>
+                                                <outputFileNameMapping>standalone/deployments/ticket-monster.war</outputFileNameMapping>
                                             </dependencySet>
                                         </dependencySets>
                                         <fileSets>
