--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.redhat.ticketmonster</groupId>
   <artifactId>ticket-monster-admin</artifactId>
-  <version>1.0</version>
+  <version>2.0-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>ticket-monster-admin</name>
   <description>The admin backend for a microservices ticketmonster deployment</description>
