--- a/pom.xml
+++ b/pom.xml
@@ -35,36 +35,12 @@
     <buildhelper.plugin.version>1.7</buildhelper.plugin.version>
 
     <wildfly.swarm.version>1.0.0.CR1</wildfly.swarm.version>
+    <!--<wildfly.swarm.version>1.0.2.Final</wildfly.swarm.version>-->
+    <fabric8.maven.plugin.version>3.1.28</fabric8.maven.plugin.version>
 
-    <!--  fabric8 / docker -->
-    <docker.maven.plugin.version>0.14.2</docker.maven.plugin.version>
     <docker.from>fabric8/java-jboss-openjdk8-jdk:1.0.13</docker.from>
-    <docker.image>${fabric8.dockerUser}${project.artifactId}:${project.version}</docker.image>
-    <docker.port.container.http>8080</docker.port.container.http>
-    <docker.port.container.jolokia>8778</docker.port.container.jolokia>
-
-
-    <fabric8.version>2.2.110</fabric8.version>
     <fabric8.dockerUser>fabric8/</fabric8.dockerUser>
-
-    <fabric8.service.name>tm-admin</fabric8.service.name>
-    <fabric8.service.port>80</fabric8.service.port>
-    <fabric8.service.containerPort>8080</fabric8.service.containerPort>
-    <fabric8.service.type>LoadBalancer</fabric8.service.type>
-
-    <fabric8.readinessProbe.httpGet.port>8080</fabric8.readinessProbe.httpGet.port>
-    <fabric8.readinessProbe.httpGet.path>/admin/forge/events</fabric8.readinessProbe.httpGet.path>
-    <fabric8.readinessProbe.timeoutSeconds>30</fabric8.readinessProbe.timeoutSeconds>
-    <fabric8.readinessProbe.initialDelaySeconds>5</fabric8.readinessProbe.initialDelaySeconds>
-
-    <fabric8.label.group>ticket-monster</fabric8.label.group>
-    <fabric8.label.service>ticket-monster-admin</fabric8.label.service>
-    <fabric8.iconRef>wildfly</fabric8.iconRef>
-
-    <fabric8.env.AB_OFF>true</fabric8.env.AB_OFF>
-    <fabric8.env.JAVA_ENABLE_DEBUG>false</fabric8.env.JAVA_ENABLE_DEBUG>
-    <fabric8.env.JAVA_DEBUG_PORT>5005</fabric8.env.JAVA_DEBUG_PORT>
-    <fabric8.env.JAVA_OPTIONS>-Dswarm.ds.username=root -Dswarm.ds.password=admin -Dswarm.ds.name=TicketMonsterMySQLDS -Dswarm.ds.connection.url=jdbc:mysql://mysqladmin:3306/ticketmonster</fabric8.env.JAVA_OPTIONS>
+    <docker.image>${fabric8.dockerUser}${project.artifactId}:${project.version}</docker.image>
   </properties>
 
   <dependencyManagement>
@@ -261,14 +237,25 @@
     <plugins>
       <plugin>
         <groupId>io.fabric8</groupId>
-        <artifactId>docker-maven-plugin</artifactId>
-        <version>${docker.maven.plugin.version}</version>
+        <artifactId>fabric8-maven-plugin</artifactId>
+        <version>${fabric8.maven.plugin.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>resource</goal>
+            </goals>
+          </execution>
+        </executions>
         <configuration>
+
           <images>
             <image>
               <name>${docker.image}</name>
               <build>
                 <from>${docker.from}</from>
+                <ports>
+                  <port>8080</port>
+                </ports>
                 <assembly>
                   <basedir>/app</basedir>
                   <inline>
@@ -287,28 +274,22 @@
               </build>
             </image>
           </images>
+          <resources>
+            <services>
+              <service>
+                <name>tm-admin</name>
+                <ports>
+                  <port>
+                    <protocol>TCP</protocol>
+                    <port>80</port>
+                    <name>wildfly-swarm</name>
+                    <targetPort>8080</targetPort>
+                  </port>
+                </ports>
+              </service>
+            </services>
+          </resources>
         </configuration>
-      </plugin>
-      <plugin>
-        <groupId>io.fabric8</groupId>
-        <artifactId>fabric8-maven-plugin</artifactId>
-        <version>${fabric8.version}</version>
-        <executions>
-          <execution>
-            <id>json</id>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>json</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>attach</id>
-            <phase>package</phase>
-            <goals>
-              <goal>attach</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
       <plugin>
         <groupId>org.wildfly.swarm</groupId>
