--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,10 @@
     <version.surefire.plugin>2.10</version.surefire.plugin>
     <buildhelper.plugin.version>1.7</buildhelper.plugin.version>
 
-    <wildfly.swarm.version>1.0.0.CR1</wildfly.swarm.version>
-    <!--<wildfly.swarm.version>1.0.2.Final</wildfly.swarm.version>-->
-    <fabric8.maven.plugin.version>3.1.28</fabric8.maven.plugin.version>
+    <wildfly.swarm.version>2016.10.0</wildfly.swarm.version>
 
-    <docker.from>fabric8/java-jboss-openjdk8-jdk:1.0.13</docker.from>
-    <fabric8.dockerUser>fabric8/</fabric8.dockerUser>
-    <docker.image>${fabric8.dockerUser}${project.artifactId}:${project.version}</docker.image>
+    <fabric8.maven.plugin.version>3.1.73</fabric8.maven.plugin.version>
+
   </properties>
 
   <dependencyManagement>
@@ -236,62 +233,6 @@
     </pluginManagement>
     <plugins>
       <plugin>
-        <groupId>io.fabric8</groupId>
-        <artifactId>fabric8-maven-plugin</artifactId>
-        <version>${fabric8.maven.plugin.version}</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>resource</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-
-          <images>
-            <image>
-              <name>${docker.image}</name>
-              <build>
-                <from>${docker.from}</from>
-                <ports>
-                  <port>8080</port>
-                </ports>
-                <assembly>
-                  <basedir>/app</basedir>
-                  <inline>
-                    <id>${project.artifactId}</id>
-                    <files>
-                      <file>
-                        <source>${project.build.directory}/${project.build.finalName}-swarm.jar</source>
-                        <outputDirectory>/</outputDirectory>
-                      </file>
-                    </files>
-                  </inline>
-                </assembly>
-                <env>
-                  <JAVA_APP_JAR>${project.build.finalName}-swarm.jar</JAVA_APP_JAR>
-                </env>
-              </build>
-            </image>
-          </images>
-          <resources>
-            <services>
-              <service>
-                <name>tm-admin</name>
-                <ports>
-                  <port>
-                    <protocol>TCP</protocol>
-                    <port>80</port>
-                    <name>wildfly-swarm</name>
-                    <targetPort>8080</targetPort>
-                  </port>
-                </ports>
-              </service>
-            </services>
-          </resources>
-        </configuration>
-      </plugin>
-      <plugin>
         <groupId>org.wildfly.swarm</groupId>
         <artifactId>wildfly-swarm-plugin</artifactId>
         <version>${wildfly.swarm.version}</version>
@@ -463,37 +404,52 @@
       <dependencies>
         <dependency>
           <groupId>org.wildfly.swarm</groupId>
-          <artifactId>jpa-mysql</artifactId>
-          <version>1.0.0.CR3</version>
+          <artifactId>mysql</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.wildfly.swarm</groupId>
+          <artifactId>jpa</artifactId>
+          <exclusions>
+            <exclusion>
+              <groupId>org.wildfly.swarm</groupId>
+              <artifactId>h2</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
       </dependencies>
     </profile>
-
-
-    <!-- fabric8 profiles -->
     <profile>
-      <id>f8-build</id>
+      <id>f8</id>
       <build>
-        <defaultGoal>clean install docker:build fabric8:json</defaultGoal>
-      </build>
-    </profile>
-    <profile>
-      <id>f8-deploy</id>
-      <properties>
-        <fabric8.imagePullPolicySnapshot>Always</fabric8.imagePullPolicySnapshot>
-        <fabric8.recreate>true</fabric8.recreate>
-      </properties>
-      <build>
-        <defaultGoal>clean install docker:build docker:push fabric8:json fabric8:apply</defaultGoal>
-      </build>
-    </profile>
-    <profile>
-      <id>f8-local-deploy</id>
-      <properties>
-        <fabric8.recreate>true</fabric8.recreate>
-      </properties>
-      <build>
-        <defaultGoal>clean install docker:build fabric8:json fabric8:apply</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>io.fabric8</groupId>
+            <artifactId>fabric8-maven-plugin</artifactId>
+            <version>${fabric8.maven.plugin.version}</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>resource</goal>
+                  <goal>build</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <generator>
+                <includes>
+                  <include>wildfly-swarm</include>
+                </includes>
+              </generator>
+              <enricher>
+                <config>
+                  <fmp-service>
+                    <name>tm-admin</name>
+                  </fmp-service>
+                </config>
+              </enricher>
+            </configuration>
+          </plugin>
+        </plugins>
       </build>
     </profile>
   </profiles>
