--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <dependencies>
       <dependency>
         <groupId>org.wildfly.swarm</groupId>
-        <artifactId>bom</artifactId>
+        <artifactId>bom-all</artifactId>
         <version>${wildfly.swarm.version}</version>
         <type>pom</type>
         <scope>import</scope>
